--- a/homepage.html
+++ b/homepage.html
@@ -80,7 +80,7 @@
             Corpers Lodge is ready to help you find a comfortable and affordable
             place to stay.
           </p>
-          <div class="btnContainer2" style="width: 80%;">
+          <div class="btnContainer2" style="width: 80%; margin: 0 auto;">
             <div>
               <a href="#"><button class="getStartedBtn">Get Started</button></a>
             </div>
@@ -416,41 +416,55 @@
     </section>
 
     <footer>
-        <div class="footerLogo">
-            <img src="/images/Corpers lodgecorperslodge-logo.svg" alt="">
-        </div>
-        <div class="faq">
-            <div class="question">
-                <h3>Useful Links</h3>
-                <i class="fa-solid fa-angle-down"></i>
+        <div class="footerFlex">
+          <div class="footerLogo">
+              <img src="/images/Corpers lodgecorperslodge-logo.svg" alt="">
+          </div>
+          <div class="faq">
+              <div class="question">
+                  <h3>Useful Links</h3>
+                  <i class="fa-solid fa-angle-down"></i>
+              </div>
+              <div class="answer">
+                  <p>Product Categories</p>
+                  <p>Special Offer</p>
+                  <p>Advertise here</p>
+              </div>
+          </div>
+          <div class="faq">
+              <div class="question">
+                  <h3>Information</h3>
+                  <i class="fa-solid fa-angle-down"></i>
+              </div>
+              <div class="answer">
+                  <p>About Us</p>
+                  <p>Career</p>
+                  <p>Office</p>
+              </div>
+          </div>
+          <div class="faq">
+              <div class="question">
+                  <h3>Support</h3>
+                  <i class="fa-solid fa-angle-down"></i>
+              </div>
+              <div class="answer">
+                  <p>FAQs</p>
+                  <p>Support Center</p>
+                  <p>Customer Care</p>
+              </div>
+          </div>
+
+          <div class="sm_address">
+            <div class="smImageContainer">
+              <div><img src="/images/Vectorfb-corperslodge.svg" alt=""></div>
+              <div><img src="/images/Vectortwitterlogo-corperslodge.svg" alt=""></div>
+              <div><img src="/images/Vectorinstalogo-corperslodge.svg" alt=""></div>
+              <div><img src="/images/Vectorlinkedinlogo-corperslodge.svg" alt=""></div>
             </div>
-            <div class="answer">
-                <p>Product Categories</p>
-                <p>Special Offer</p>
-                <p>Advertise here</p>
+            <div>
+              <p>No 16, Jire Aradi, Orogun Abeokuta</p>
             </div>
-        </div>
-        <div class="faq">
-            <div class="question">
-                <h3>Information</h3>
-                <i class="fa-solid fa-angle-down"></i>
-            </div>
-            <div class="answer">
-                <p>About Us</p>
-                <p>Career</p>
-                <p>Office</p>
-            </div>
-        </div>
-        <div class="faq">
-            <div class="question">
-                <h3>Support</h3>
-                <i class="fa-solid fa-angle-down"></i>
-            </div>
-            <div class="answer">
-                <p>FAQs</p>
-                <p>Support Center</p>
-                <p>Customer Care</p>
-            </div>
+          </div>
         </div>
     </footer>
 
