--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@400;500;600;700;800;900&family=Nunito:wght@400;500;600;700;800;900&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <title>CORPERS-LODGE</title>
@@ -15,7 +17,7 @@
         <header blur-overlay>
             <nav class="navbar-cont">
                 <div class="header-bar">
-                    <div class="header-left">
+                    <div class="animate__animated animate__bounce header-left">
                         <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
                     </div>
                     <div class="toggle-bar">
@@ -70,7 +72,7 @@
                         </li>
                         <li class="drop-down">
                             <a class="link-a" href="#">Listing</a>
-                            <div class="dropdown-cont">
+                            <div class="animate__animated animate__bounce animate__faster dropdown-cont">
                                 <ul class="drop-content">
                                     <li>
                                         <a class="drop-img" href="#">
@@ -114,7 +116,7 @@
                             </h1>
                         </div>
                         <div class="paragraph">
-                            <p class="para-text">
+                            <p class="para-text animate__backOutUp">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam feugiat in lacus tristique. Penatibus lobortis nunc pellentesque augue bibendum auctor sed. Proin scelerisque scelerisque mauris sagittis nunc, cras mauris elit. Condimentum habitasse facilisis amet varius sit nec nibh.
                             </p>
                         </div>
@@ -129,7 +131,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-2">
+        <section   class="animate__animated animate__bounce animate__repeat-2 section-2">
             <!-- 
                 <main class="main-stream">
                     <div class="back-ground">
@@ -202,15 +204,13 @@
         </section>
         <section class="section-3">
             <div class="head">
-                <h3>REVIEWS
-                 <span class="div-c" >   What Clients Are Saying About Us</span>
+                <h3>
+                    REVIEWS
+                    <span class="div-c">   What Clients Are Saying About Us</span>
                 </h3>
             </div>
             <div>
-                <h3>
-                    
-                    
-                </h3>
+                <h3></h3>
             </div>
             <div class="img-adam">
                 <div class="adam">
@@ -307,5 +307,6 @@
             </section>
         </footer>
         <script src="./js file/toggle.js" async defer></script>
+        <script src="./header/header.js" async defer></script>
     </body>
 </html>
