--- a/password/index.html
+++ b/password/index.html
@@ -35,7 +35,6 @@
                             placeholder="enter your email address"
                             onkeydown=" emailvalidation()"
                         >
-                        <i id="emailcheckicon" style="width:20%;"></i>
                         <span id="text"></span>
                     </div>
                     <div class="inputbx">
@@ -45,11 +44,11 @@
                             name="password"
                             id="password"
                             placeholder="enter a password 8 numbers max"
-                        >
-                        <i class=""></i>
+                            onkeydown="passwordvalidation()"
+                        />
                         <span id="passText"></span>
                     </div>
-                    <button onclick="emailvalidation()" type="submit">LOGIN</button>
+                    <button onclick="emailvalidation(), passwordvalidation()" type="submit">LOGIN</button>
                 </form>
             </div>
         </main>
