forgot password complete

--- a/forgotPassword/forgotpassword.html
+++ b/forgotPassword/forgotpassword.html
@@ -19,6 +19,10 @@
                 <input type="text" name="" id="email" placeholder="Enter your email addres" onkeydown="validation()">
                 <span id="text"></span>
             </div>
+            <div class="btn_container">
+                <button>Continue</button>
+            </div>
+            <p>Didn’t receive any mail, Click Resend <a href="">Link</a></p>
         </form>
     </div>
 
