password changed successfully complete

--- a/forgotPassword/pcs.html
+++ b/forgotPassword/pcs.html
@@ -11,8 +11,8 @@
 <body>
     <section>
         <div><img src="/Corpers-Lodge/forgotPassword/imgs/codicon_passcheck.svg" alt=""></div>
-        <p>Password Changed Successfully</p>
-         <p>Click here to <a href="#">Login</a></p>
+        <p class="pcs">Password Changed Successfully</p>
+         <p class="click">Click here to <a href="#">Login</a></p>
     </section>
 </body>
 </html>
