--- a/password/index.html
+++ b/password/index.html
@@ -35,6 +35,7 @@
                             placeholder="enter your email address"
                             onkeydown=" emailvalidation()"
                         >
+                        <i id="emailcheckicon" style="width:20%;"></i>
                         <span id="text"></span>
                     </div>
                     <div class="inputbx">
@@ -44,6 +45,8 @@
                             name="password"
                             id="password"
                             placeholder="enter a password 8 numbers max"
+                        
+                        
                             onkeydown="passwordvalidation()"
                         />
                         <span id="passText"></span>
