--- a/password/index2.html
+++ b/password/index2.html
@@ -11,21 +11,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@400;500;600;700;800;900&family=Nunito:wght@400;500;600;700;800;900&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <title>CORPERS-LODGE</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/password/style.scss/style.css">
     <body>
         <div class="blur_overlay"></div>
         <header blur-overlay>
             <nav class="navbar-cont">
                 <div class="header-bar">
                     <div class="animate__animated animate__bounce header-left">
-                        <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
+                        <img class="corpers-lodge-img" src="/image/Corpers lodge.svg" alt="corpers-lodge">
                     </div>
                     <div class="toggle-bar">
-                        <img src="./image/bars-solid.svg" alt="bars">
+                        <img src="/image/bars-solid.svg" alt="bars">
                     </div>
                 </div>
                 <div class="header-right">
                     <ul>
+                        
                         <li>
                             <a class="link-a" href="#">Home</a>
                         </li>
@@ -35,17 +36,17 @@
                                 <ul class="drop-content">
                                     <li>
                                         <a class="drop-img" href="#">
-                                            <img src="./image/house -listing.svg" alt="">
+                                            <img src="/image/house -listing.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
                                         <a class="drop-img2" href="#">
-                                            <img src="./image/corpers hang.svg" alt="">
+                                            <img src="/image/corpers hang.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
                                         <a class="drop-img3" href="#">
-                                            <img src="./image/hotel listing.svg" alt="">
+                                            <img src="/image/hotel listing.svg" alt="">
                                         </a>
                                     </li>
                                 </ul>
@@ -57,17 +58,14 @@
                         <li>
                             <a class="link-a" href="#">Contact</a>
                         </li>
-                        <li>
-                            <a class="link-a" href="./password/index.html">Login</a>
-                        </li>
                         <li class="sign-up-btn">
-                            <a class="sign-btn" href="#">Sign Up</a>
+                            <a class="sign-btn" href="#"> <span><img src="/image/Vector (1).svg" alt=""></span>Account</a>
                         </li>
                     </ul>
                 </div>
                 <div class="header-toggle">
                     <div class="close-menu">
-                        <img class="close-menu" src="./image/xmark-solid.svg" alt="solid">
+                        <img class="close-menu" src="/image/xmark-solid.svg" alt="solid">
                     </div>
                     <ul>
                         <li>
@@ -79,17 +77,17 @@
                                 <ul class="drop-content">
                                     <li>
                                         <a class="drop-img" href="#">
-                                            <img src="./image/house -listing.svg" alt="">
+                                            <img src="/image/house -listing.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
                                         <a class="drop-img2" href="#">
-                                            <img src="./image/corpers hang.svg" alt="">
+                                            <img src="/image/corpers hang.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
                                         <a class="drop-img3" href="#">
-                                            <img src="./image/hotel listing.svg" alt="">
+                                            <img src="/image/hotel listing.svg" alt="">
                                         </a>
                                     </li>
                                 </ul>
@@ -101,11 +99,8 @@
                         <li>
                             <a class="link-a" href="#">Contact</a>
                         </li>
-                        <li>
-                            <a class="link-a" href="./password/index.html">Login</a>
-                        </li>
                         <li class="sign-up-btn">
-                            <a class="sign-btn" href="#">Sign Up</a>
+                            <a class="sign-btn" href="#"> <span><img src="/image/Vector (1).svg" alt=""></span>Account</a>
                         </li>
                     </ul>
                 </div>
@@ -133,7 +128,7 @@
                     </div>
                 </div>
                 <div class="img-cont">
-                    <img class="image-1" src="./image/group-image.png" alt="">
+                    <img class="image-1" src="/image/group-image.png" alt="">
                 </div>
             </div>
         </section>
@@ -198,13 +193,13 @@
             </div>
             <div class="images-reps">
                 <div id="11">
-                    <img class="image-rep1" src="./image/Group 372 (1).svg" alt="">
+                    <img class="image-rep1" src="/image/Group 372 (1).svg" alt="">
                 </div>
                 <div id="12">
-                    <img class="image-rep2" src="./image/Group 373 (1).svg" alt="">
+                    <img class="image-rep2" src="/image/Group 373 (1).svg" alt="">
                 </div>
                 <div id="13">
-                    <img class="image-rep3" src="./image/andy374.svg" alt="">
+                    <img class="image-rep3" src="/image/andy374.svg" alt="">
                 </div>
             </div>
         </section>
@@ -220,20 +215,20 @@
             </div>
             <div class="img-adam">
                 <div class="adam">
-                    <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                    <img src="/image/testimonial 2.svg" alt="" class="adam-img">
                 </div>
                 <div class="adam">
-                    <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                    <img src="/image/testimonial 2.svg" alt="" class="adam-img">
                 </div>
                 <div class="adam">
-                    <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                    <img src="/image/testimonial 2.svg" alt="" class="adam-img">
                 </div>
             </div>
         </section>
         <footer>
             <section class="footer-sect">
                 <div class="logo">
-                    <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
+                    <img class="corpers-lodge-img" src="/image/Corpers lodge.svg" alt="corpers-lodge">
                 </div>
                 <div class="hehe" style="color: #fff;">yhhhhhhh</div>
                 <div class="line1">
@@ -280,13 +275,13 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link-b" href="#">FAQs</a>
+                            <a class="link-b" href="">FAQs</a>
                         </li>
                         <li>
-                            <a class="link-b" href="#">Support Center</a>
+                            <a class="link-b" href="">Support Center</a>
                         </li>
                         <li>
-                            <a class="link-b" href="#">Customer Care</a>
+                            <a class="link-b" href="">Customer Care</a>
                         </li>
                     </ul>
                 </div>
@@ -311,100 +306,9 @@
                     <p class="sub">Orogun Abeokuta</p>
                 </div>
             </section>
-            <!-- <section class="section-footer">
-                <div class="footerLogo">
-                    <img src="/images/Corpers lodgecorperslodge-logo.svg" alt="">
-                </div>
-                <div class="faq">
-                    <div class="question">
-                        <h3>Useful Links</h3>
-                        <i class="fa-solid fa-angle-down"></i>
-                    </div>
-                    <div class="answer">
-                        <p>Product Categories</p>
-                        <p>Special Offer</p>
-                        <p>Advertise here</p>
-                    </div>
-                </div>
-                <div class="faq">
-                    <div class="question">
-                        <h3>Information</h3>
-                        <i class="fa-solid fa-angle-down"></i>
-                    </div>
-                    <div class="answer">
-                        <p>About Us</p>
-                        <p>Career</p>
-                        <p>Office</p>
-                    </div>
-                </div>
-                <div class="faq">
-                    <div class="question">
-                        <h3>Support</h3>
-                        <i class="fa-solid fa-angle-down"></i>
-                        <div class="footerFlex">
-                            <div class="footerLogo">
-                                <img src="/images/Corpers lodgecorperslodge-logo.svg" alt="">
-                            </div>
-                            <div class="faq">
-                                <div class="question">
-                                    <h3>Useful Links</h3>
-                                    <i class="fa-solid fa-angle-down"></i>
-                                </div>
-                                <div class="answer">
-                                    <p>Product Categories</p>
-                                    <p>Special Offer</p>
-                                    <p>Advertise here</p>
-                                </div>
-                            </div>
-                            <div class="faq">
-                                <div class="question">
-                                    <h3>Information</h3>
-                                    <i class="fa-solid fa-angle-down"></i>
-                                </div>
-                                <div class="answer">
-                                    <p>About Us</p>
-                                    <p>Career</p>
-                                    <p>Office</p>
-                                </div>
-                            </div>
-                            <div class="faq">
-                                <div class="question">
-                                    <h3>Support</h3>
-                                    <i class="fa-solid fa-angle-down"></i>
-                                </div>
-                                <div class="answer">
-                                    <p>FAQs</p>
-                                    <p>Support Center</p>
-                                    <p>Customer Care</p>
-                                </div>
-                            </div>
-                            <div class="sm_address">
-                                <div class="smImageContainer">
-                                    <div>
-                                        <img src="/images/Vectorfb-corperslodge.svg" alt="">
-                                    </div>
-                                    <div>
-                                        <img src="/images/Vectortwitterlogo-corperslodge.svg" alt="">
-                                    </div>
-                                    <div>
-                                        <img src="/images/Vectorinstalogo-corperslodge.svg" alt="">
-                                    </div>
-                                    <div>
-                                        <img src="/images/Vectorlinkedinlogo-corperslodge.svg" alt="">
-                                    </div>
-                                </div>
-                                <div class="answer">
-                                    <p>FAQs</p>
-                                    <p>Support Center</p>
-                                    <p>Customer Care</p>
-                                    <div>
-                                        <p>No 16, Jire Aradi, Orogun Abeokuta</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </section> -->
         </footer>
-        <script src="./js file/toggle.js" async defer></script>
-        <script src="./header/header.js" async defer></script>
+        <!-- <script src="/js file/toggle.js" async defer></script> -->
+        <!-- <script src="./header/header.js" async defer></script> -->
+        <script src="./style.scss/header2.js" async defer></script>
     </body>
 </html>
