--- a/forgotPassword/forgotpassword.html
+++ b/forgotPassword/forgotpassword.html
@@ -20,7 +20,7 @@
                 <span id="text"></span>
             </div>
             <div class="btn_container">
-                <button>Continue</button>
+                <button id="btn" type="submit">Continue</button>
             </div>
             <p>Didn’t receive any mail, Click Resend <a href="">Link</a></p>
         </form>
